# rustzero2prod

./: .env  Cargo.toml  Dockerfile  configuration.yaml  sqlx-data.json
.github/workflows/: general.yaml
configuration/: base.yaml  production.yaml
migrations/: 20211113233637_add_subscriber_status_field.sql  20211114000056_update_existing_subscriber_status_to_confirmed.sql  20211114001355_add_subcriber_confirmation_token_table.sql
scripts/: init_db.sh
src/: configurations.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs  validation.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs
