[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Dylan Kirby <dylankirbydev@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.5"
config = "0.11.0"
serde = "1.0.126"
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
tracing-futures = "0.2.5"
tracing-bunyan-formatter = "0.2.4"
tracing-log = "0.1.2"
tracing-actix-web = "0.4.0-beta.8"
unicode-segmentation = "1.8.0"
validator = "0.14.0"

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.5.1"
default-features = false
features = [
	"runtime-actix-rustls",
	"macros",
	"postgres",
	"uuid",
	"chrono",
	"migrate",
	"offline"
]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dev-dependencies]
actix-rt = "2"
claim = "0.5.0"
once_cell = "1.8.0"
reqwest = "0.11"
tokio = "1"
